#
#  CMakeLists.txt
#
#  Copyright 2016-2017 Göran Orsander
#
#  This file is part of the GO.libraries.
#  Distributed under the GO Software License, Version 2.0.
#  See accompanying file LICENSE.md.
#

add_subdirectory(boost_mvvm)
add_subdirectory(boost_property)
add_subdirectory(boost_utility)
add_subdirectory(mvvm)
add_subdirectory(property)
add_subdirectory(signals)
add_subdirectory(utility)
