#
#  CMakeLists.txt
#
#  Copyright 2016-2019 Göran Orsander
#
#  This file is part of the GO.libraries.
#  Distributed under the GO Software License, Version 2.0.
#  See accompanying file LICENSE.md.
#

add_subdirectory(boost_config)
add_subdirectory(boost_diagnostics)
add_subdirectory(boost_exception)
add_subdirectory(boost_mvvm)
add_subdirectory(boost_property)
add_subdirectory(boost_signals)
add_subdirectory(boost_type_traits)
add_subdirectory(boost_utility)
add_subdirectory(gtest_extensions)
add_subdirectory(std_config)
add_subdirectory(std_diagnostics)
add_subdirectory(std_exception)
add_subdirectory(std_mvvm)
add_subdirectory(std_property)
add_subdirectory(std_signals)
add_subdirectory(std_type_traits)
add_subdirectory(std_utility)
